<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY nbsp "&#160;">
    <!ENTITY emsp "&#8195;">
    <!ENTITY tab "&#0009;">
    ]>
<resources>
    <string name="app_name">CM Global Jackpot Sign Demonstrator</string>
    <string name="manual_update">TRANSMIT</string>
    <string name="auto_update"><font size = '24'>RANDOM UPDATE</font> \n\ <font size = '14'>Note: only one sign can be updated at a time randomly</font></string>
    <string name="stop">STOP</string>
    <string name="cmg_settings_title">CM GLOBAL PROTOCOL SETTINGS</string>
    <string name="select_manufacturer_code_title">Select Manufacturer Code:</string>
    <string name="cm">CM</string>
    <string name="pl">PL</string>
    <string name="state_code_title">Select State Code:</string>
    <string name="sign_number_title">Input Sign Number:</string>
    <string name="select_panel_effect_code_title">Select Panel Effect Code:</string>
    <string name="confirm">CONFIRM</string>
    <string name="cancel">CANCEL</string>
    <string name="digit_display_default_value_888">888</string>
    <string name="msg_display_default_value_1">abcde</string>
    <string name="msg_display_default_value_2">ABCDE</string>
    <string name="home_button_caption">HOME</string>
    <string name="help_button_caption">HELP</string>
    <string name="home_screen_disclaimer">IMPORTANT: At this time you need to plug the transmitter into the USB port on the side of the tablet.\n\Select the icon representing the sign you want to update below.</string>
    <string name="footer">Tablet is Property of CM Global\n\1201 N 4th Street, Watertown, WI 53098 | 920&#8211;567&#8211;0333 | www.CMGlobal.com</string>
    <string name="instruction_1"> Instructions: \n\1.<font color = '#ff0000'> IMPORTANT:</font> Plug the sign’s transmitter into the USB port on the side of the tablet \n\2. Select the eld below you want to manually update and enter desired values, or check RANDOM UPDATE below. \n\3. Tap TRANSMIT to update sign</string>
    <string name="sign_controller_1_app_name">VEND JACKPOT SIGN</string>
    <string name="game_1_title">A</string>
    <string name="game_2_title">B</string>
    <string name="game_3_title">C</string>
    <string name="game_4_title">D</string>
    <string name="description_company_logo">CompanyLogo</string>
    <string name="sign_controller_1_main_title">Vending Machine Jackpot Sign Demo</string>
    <string name="sign_Help_main_title">Welcome to the CMGlobal Sign Demo Tablet</string>
    <string name="sign_Help_content"><font size ='22'><b>These instructions will allow you to update your CMGlobal Jackpot Signs.</b></font> \n\After reading these instructions tap the BACK button to return to updating your sign. \n\n\<font color = '#ff0000'>Plug the sign’s transmitter into the USB port on the side of the tablet.</font> \n\n\<font size = '20'><b>To update your sign: </b></font>\n\n\<font size = '18'><b>Random Updating:</b></font>  \n\&#9;• Random Update sends random, changing values to the different sign windows every few seconds  \n\&#9;• Select the RANDOM UPDATE box on the screen.  \n\&#9;• Tap TRANSMIT to start Random Updating on the sign.  \n\&#9;• Please note the tablet needs to be running for Random Updating, and only one sign can update randomly at any time. Any other signs need to be on Manual Updated. \n\n\<font size = '18'><b>Manual Updating: </b></font> \n\&#9;• Allows you to display specific jackpot values and text (if applicable) on your sign.  \n\&#9;• Tap in the digit box of the game you want to update.  \n\&#9;• A keyboard will appear.  \n\&#9; "        - Enter the value of the jackpot for the game you want to update."  \n\&#9; "        - For a blank space enter “X”"  \n\&#9; "        - For Billion dollar jackpots a “B” will display in the last position if you enter “B”" \n\&#9;• When you finish the first game tap in the digit box of the next game and repeat the process until all game values are on the screen.  \n\&#9;• Under each digit box check “Static” if you want the digits in that box to stay on, or check “Flash” if you want the digits in that box to flash for attention-getting value  \n\&#9;• Tap in the text box (if applicable) under the digit box. A keyboard will appear. Enter the characters you want for that text box. Text boxes are 5 or 7 characters in length.  \n\&#9;• Under each text box check “Static” if you want the text in that box to stay on, or check “Flash” if you want the text in that box to flash for attention-getting value  \n\&#9;• Tap TRANSMIT to send the entered data to the sign and update the sign. \n\n\<b>It may take several seconds for the first transmission to go through. \n\n\You can update a second sign (if applicable) once the first sign is updated by returning to the HOME screen and clicking on a different sign icon.</b></string>
    <string name="back_button_caption">BACK</string>
    <string name="sign_id_initial_value">000001</string>
    <string name="app_name_sub_1">VEND JACKPOT SIGN</string>

    <string-array name="digit_effect_code">
        <item>FS-Static</item>
        <item>FF-Flash</item>
    </string-array>

    <string-array name="panel_effect_code_1">
        <item>Null-No panel effect code</item>
        <item>A-Auto sensor mode</item>
        <item>D-Day light mode</item>
        <item>N-Night mode</item>
        <item>L-Full brightness mode</item>
    </string-array>

    <string-array name="panel_effect_code_2">
        <item>Null-No panel effect code</item>
        <item>A-L=On  R=Off</item>
        <item>B-L=Flash  R=On</item>
        <item>C-L=Off  R=On</item>
        <item>D-L=On  R=Flash</item>
        <item>E-Alternate Flash</item>
        <item>F-Whole Panel Flash</item>
        <item>G-L=On  R=Off</item>
        <item>H-L=Off  R=On</item>
        <item>Y-Full Panel On</item>
        <item>Z-Full Panel Off</item>
    </string-array>

    <string-array name="state_code">
        <item>Choose a state code here!</item>
        <item>Alabama-AL</item>
        <item>Alaska-AK</item>
        <item>Arizona-AZ</item>
        <item>Arkansas-AR</item>
        <item>California-CA</item>
        <item>Colorado-CO</item>
        <item>Connecticut-CT</item>
        <item>Delaware-DE</item>
        <item>District of Columbia-DC</item>
        <item>Florida-FL</item>
        <item>Georgia-GA</item>
        <item>Hawaii-HI</item>
        <item>Idaho-ID</item>
        <item>Illinois-IL</item>
        <item>Indiana-IN</item>
        <item>Iowa-IA</item>
        <item>Kansas-KS</item>
        <item>Kentucky-KY</item>
        <item>Louisiana-LA</item>
        <item>Maine-ME</item>
        <item>Maryland-MD</item>
        <item>Massachusetts-MA</item>
        <item>Michigan-MI</item>
        <item>Minnesota-MN</item>
        <item>Mississippi-MS</item>
        <item>Missouri-MO</item>
        <item>Montana-MT</item>
        <item>Nebraska-NE</item>
        <item>Nevada-NV</item>
        <item>New Hampshire-NH</item>
        <item>New Jersey-NJ</item>
        <item>New Mexico-NM</item>
        <item>New York-NY</item>
        <item>North Carolina-NC</item>
        <item>North Dakota-ND</item>
        <item>Ohio-OH</item>
        <item>Oklahoma-OK</item>
        <item>Oregon-OR</item>
        <item>Pennsylvania-PA</item>
        <item>Rhode Island-RI</item>
        <item>South Carolina-SC</item>
        <item>South Dakota-SD</item>
        <item>Tennessee-TN</item>
        <item>Texas-TX</item>
        <item>Utah-UT</item>
        <item>Vermont-VT</item>
        <item>Virginia-VA</item>
        <item>Washington State-WA</item>
        <item>West Virginia-WV</item>
        <item>Wisconsin-WI</item>
        <item>Wyoming-WY</item>
        <item>Puerto Rico-PR</item>
    </string-array>
</resources>
